--- a/services/web/Dockerfile
+++ b/services/web/Dockerfile
@@ -9,8 +9,10 @@ ENV PYTHONUNBUFFERED 1
 
 # install dependencies
 RUN apt update
-RUN apt install libjpeg-dev gcc zlib1g-dev unrar-free unzip -y
+RUN apt install libjpeg-dev gcc zlib1g-dev p7zip-full -y
 RUN pip install --upgrade pip
 RUN pip install wheel
+COPY ./p7zip-rar_16.02-3_amd64.deb /usr/src/app/p7zip-rar_16.02-3_amd64.deb
+RUN apt install ./p7zip-rar_16.02-3_amd64.deb
 COPY ./requirements.txt /usr/src/app/requirements.txt
 RUN pip install -r requirements.txt
