--- a/services/web/Dockerfile
+++ b/services/web/Dockerfile
@@ -8,11 +8,11 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 # install dependencies
+# Add non-free to apt
+RUN sed -i 's/main/main non-free/' /etc/apt/sources.list
 RUN apt update
-RUN apt install libjpeg-dev gcc zlib1g-dev p7zip-full -y
+RUN apt install libjpeg-dev gcc zlib1g-dev p7zip-full p7zip-rar -y
 RUN pip install --upgrade pip
 RUN pip install wheel
-COPY ./p7zip-rar_16.02-3_amd64.deb /usr/src/app/p7zip-rar_16.02-3_amd64.deb
-RUN apt install ./p7zip-rar_16.02-3_amd64.deb
 COPY ./requirements.txt /usr/src/app/requirements.txt
 RUN pip install -r requirements.txt
